k8s/vt-map-editor.yaml
apiVersion: v1
kind: Service
metadata:
    name: vt-map-editor-cluster-ip
spec:
    type: ClusterIP
    selector:
        app: vt-map-editor
    ports:
        - port: 8080
          targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: vt-map-editor-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: vt-map-editor
    template:
        metadata:
            labels:
                app: vt-map-editor
                tier: frontend
        spec:
            containers:
                - name: vt-map-editor
                  image: basisvisualisierung/vt-map-editor
                  ports:
                    - containerPort: 80
