k8s/vt-map-view.yaml
apiVersion: v1
kind: Service
metadata:
    name: vt-map-view-cluster-ip
spec:
    type: ClusterIP
    selector:
        app: vt-map-view
    ports:
        - port: 8082
          targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: vt-map-view-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: vt-map-view
    template:
        metadata:
            labels:
                app: vt-map-view
                tier: frontend
        spec:
            containers:
                - name: vt-map-view
                  image: basisvisualisierung/vt-map-view
                  ports:
                    - containerPort: 80
