k8s/vt-styles.yaml
apiVersion: v1
kind: Service
metadata:
    name: vt-styles-cluster-ip
spec:
    type: ClusterIP
    selector:
        service: vt-styles
    ports:
        - port: 8083
          targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: vt-styles-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            service: vt-styles
    template:
        metadata:
            labels:
                service: vt-styles
                tier: backend
        spec:
            containers:
                - name: vt-styles
                  image: vt-styles
                  imagePullPolicy: Never
                  ports:
                    - containerPort: 80
